nullaway_error_45a8fae0-6ba4-40f8-b90b-9b432d239022.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TilesetEntry.java:51: error: [NullAway] initializer method does not guarantee @NonNull field tileset (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public TilesetEntry() {
         ^
    (see http://t.uber.com/nullaway )
